# chappy

./: .dockerignore  .gitignore  Dockerfile  README.md  download-model.sh  download_models.sh  pylama.ini  pyproject.toml
src/: advanced_segmentizer.py  advanced_summarizer.py  app.py  chapter.py  chapterizer.py  punctuator_model_provider.py  segment.py  sentence_similarity_segmentizer.py  simple_segmentizer.py  summarizer.py  transcriber.py  wordnet_sentence_similarity.py  youtube_video.py
src/data_objects/: chapter.py  chapterized_youtube_video.py  segment.py  transcribed_youtube_video.py  youtube_video.py
src/segmentizers/: sentence_similarity_segmentizer.py
src/summarizers/: bart_summarizer.py
test/: __init__.py  test_chapterizer.py  test_segment.py  test_simple_segmentizer.py  test_transcribed_youtube_video.py  test_transcriber.py  test_youtube_video.py
