[tool.poetry]
name = "chappy"
version = "0.1.0"
description = "Automatic video chapterization."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-transcript-api = "^0.3.1"
gensim = "^3.8.3"
nltk = "^3.5"
transformers = "^4.0.1"
tensorflow = "^2.4.0rc4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pylama = "^7.7.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
