[tool.poetry]
name = "chappy"
version = "0.1.0"
description = "Automatic video chapterization."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-transcript-api = "^0.3.1"
gensim = "^3.8.3"
punctuator = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pylama = "^7.7.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
