[tool.poetry]
name = "chappy"
version = "0.1.0"
description = "Automatic video chapterization."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
youtube-transcript-api = "^0.3.1"
gensim = "^3.8.3"
punctuator = "^0.9.6"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp37-cp37m-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pylama = "^7.7.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
